--- a/styles/sass/_type.scss
+++ b/styles/sass/_type.scss
@@ -85,9 +85,10 @@ body {
 header h1 {
     margin: 0;
     padding: 0;
-    font-size: 4.5rem;
-    line-height: 8.5rem;
+    font-size: 4rem;
+    line-height: 8rem;
     text-align: center;
+    font-weight: normal;
 }
 
 @media (max-width: 1199px) {
