made form share width with rest of the page content on all media queries

--- a/styles/sass/_containers.scss
+++ b/styles/sass/_containers.scss
@@ -247,7 +247,11 @@ form label {
     .long {
         display: none;
     }
-    
+
+    section.contactForm .wrapper {
+        width: calc(80% - 60px);
+        margin: 30px 0px;
+    }
 }
 
 @media (max-width: 860px) {
