--- a/styles/sass/_containers.scss
+++ b/styles/sass/_containers.scss
@@ -213,7 +213,11 @@ form label {
     
     .project1,
     .project2 {
-        margin-bottom: 100px;
+        margin-bottom: 225px;
+    }
+
+    .project1 {
+        padding-top: 125px;
     }
 
     .project1,
