--- a/styles/style.css
+++ b/styles/style.css
@@ -488,7 +488,10 @@ form label {
 @media (max-width: 1300px) {
   .project1,
   .project2 {
-    margin-bottom: 100px;
+    margin-bottom: 225px;
+  }
+  .project1 {
+    padding-top: 125px;
   }
   .project1,
   .project2,
