--- a/styles/sass/_containers.scss
+++ b/styles/sass/_containers.scss
@@ -149,6 +149,7 @@ section.projectContent {
 .project2 section.projectContent {
     width: 35%;
     margin-right: 5%;
+    margin-left: 0px;
 }
 
 .projects {
