--- a/styles/sass/_type.scss
+++ b/styles/sass/_type.scss
@@ -163,6 +163,10 @@ main p {
     line-height: 4.8rem;
 }
 
+main p a {
+    border-bottom: 1px solid;
+}
+
 main h2 {
     font-weight: normal;
     border-bottom: 1px solid;
