--- a/styles/style.css
+++ b/styles/style.css
@@ -245,7 +245,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  cursor: pointer;
 }
 
 header {
@@ -435,6 +434,10 @@ section.projectContent {
   border: 1px solid;
 }
 
+button[type=submit] {
+  cursor: pointer;
+}
+
 section.contactForm {
   padding: 50px;
   display: -webkit-box;
@@ -537,6 +540,15 @@ form label {
   }
   form {
     font-size: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  section.aboutContent p {
+    text-align: center;
+  }
+  form {
+    font-size: 1.5rem;
   }
 }
 
@@ -701,6 +713,10 @@ main p {
   padding: 0;
   font-size: 2.8rem;
   line-height: 4.8rem;
+}
+
+main p a {
+  border-bottom: 1px solid;
 }
 
 main h2 {
