js much drier, some language tweaks eep :fire:

--- a/styles/sass/_type.scss
+++ b/styles/sass/_type.scss
@@ -5,7 +5,8 @@ a {
 
 //nav
 
-nav.scroll div {
+nav.scroll li {
+    list-style-type: none;
     padding: 50px;
     font-family: 'Manrope', sans-serif;
     text-transform: uppercase;
