--- a/styles/sass/_containers.scss
+++ b/styles/sass/_containers.scss
@@ -48,10 +48,16 @@ nav.scroll {
 }
 
 nav.scroll.visible {
+    display: block;
+    z-index: 120;
+}
+
+nav.scroll.visible ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    z-index: 120;
+    padding: 0;
+    margin: 0;
 }
 
 //about
