updated skills section, fixing accessibility flaws :hammer:

--- a/styles/sass/_type.scss
+++ b/styles/sass/_type.scss
@@ -86,8 +86,8 @@ body {
 header h1 {
     margin: 0;
     padding: 0;
-    font-size: 4rem;
-    line-height: 8rem;
+    font-size: 3.2rem;
+    line-height: 7.2rem;
     text-align: center;
     font-weight: normal;
 }
@@ -113,6 +113,7 @@ header h1 {
 .toSenseHisVibe,
 .ya,
 .please,
+.peruseCV,
 .emailHim {
     display: inline-block;
     padding: 5px;
@@ -132,12 +133,13 @@ header h1 {
 
 .basedInBrooklyn,
 .ifYoureCurious,
-.emailHim {
+.peruseCV {
     transform: rotate(1deg);
 }
 
 .hePrograms,
-.viewHisProjects {
+.viewHisProjects,
+.emailHim {
     transform: rotate(-3deg);
 }
 
@@ -150,6 +152,37 @@ h1 a,
 .emphatic {
     border-bottom: 3px solid;
     padding-bottom: 2px;
+}
+
+@media (max-width: 800px) {
+    .hePrograms,
+    .websites,
+    .forArtsSake,
+    .throughScreens {
+        display: none;
+    }
+}
+
+@media (max-width: 800px) {
+    .hePrograms,
+    .websites,
+    .forArtsSake,
+    .throughScreens {
+        display: none;
+    }
+}
+
+@media (max-width: 650px) {
+    .ifYoureCurious,
+    .viewHisProjects,
+    .toSenseHisVibe,
+    .ya,
+    .please {
+        display: none;
+    }
+    .restyle {
+        text-transform: capitalize;
+    }
 }
 
 //main
