--- a/styles/sass/_containers.scss
+++ b/styles/sass/_containers.scss
@@ -91,9 +91,15 @@ section.aboutHeading{
     display: inline-block;
     vertical-align: center;
     padding: 30px;
-    font-size: 2.9rem;
+    font-size: 6rem;
     position: relative;
     transition: .1s linear;
+}
+
+@media (max-width: 800px) {
+    .skills i {
+        font-size: 2.9rem;
+    }
 }
 
 .type {
@@ -117,7 +123,8 @@ section.aboutHeading{
 
 .project1,
 .project2,
-.project3 {
+.project3,
+.project4 {
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -150,7 +157,8 @@ section.projectContent {
     margin-left: 5%;
 }
 
-.project2 section.projectContent {
+.project2 section.projectContent,
+.project4 section.projectContent {
     width: 35%;
     margin-right: 5%;
     margin-left: 0px;
@@ -222,7 +230,8 @@ form label {
 @media (max-width: 1300px) {
     
     .project1,
-    .project2 {
+    .project2,
+    .project3 {
         margin-bottom: 225px;
     }
 
@@ -233,6 +242,7 @@ form label {
     .project1,
     .project2,
     .project3,
+    .project4,
     main .wrapper {
         flex-direction: column;
     }
@@ -247,14 +257,16 @@ form label {
 
     section.aboutContent,
     section.projectContent,
-    .project2 section.projectContent {
+    .project2 section.projectContent,
+    .project4 section.projectContent {
         margin-left: 0px;
         width: 80%;
         margin: 30px 0px;
         text-align: center;
     }
 
-    .project2 section.projectContent {
+    .project2 section.projectContent,
+    .project4 section.projectContent {
         order: 2;
     }
 
