--- a/styles/style.css
+++ b/styles/style.css
@@ -355,10 +355,16 @@ section.aboutHeading {
   display: inline-block;
   vertical-align: center;
   padding: 30px;
-  font-size: 2.9rem;
+  font-size: 6rem;
   position: relative;
   -webkit-transition: .1s linear;
   transition: .1s linear;
+}
+
+@media (max-width: 800px) {
+  .skills i {
+    font-size: 2.9rem;
+  }
 }
 
 .type {
@@ -381,7 +387,8 @@ section.aboutHeading {
 
 .project1,
 .project2,
-.project3 {
+.project3,
+.project4 {
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -423,7 +430,8 @@ section.projectContent {
   margin-left: 5%;
 }
 
-.project2 section.projectContent {
+.project2 section.projectContent,
+.project4 section.projectContent {
   width: 35%;
   margin-right: 5%;
   margin-left: 0px;
@@ -498,7 +506,8 @@ form label {
 
 @media (max-width: 1300px) {
   .project1,
-  .project2 {
+  .project2,
+  .project3 {
     margin-bottom: 225px;
   }
   .project1 {
@@ -507,6 +516,7 @@ form label {
   .project1,
   .project2,
   .project3,
+  .project4,
   main .wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -521,13 +531,15 @@ form label {
   }
   section.aboutContent,
   section.projectContent,
-  .project2 section.projectContent {
+  .project2 section.projectContent,
+  .project4 section.projectContent {
     margin-left: 0px;
     width: 80%;
     margin: 30px 0px;
     text-align: center;
   }
-  .project2 section.projectContent {
+  .project2 section.projectContent,
+  .project4 section.projectContent {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
@@ -661,10 +673,10 @@ header h1 {
 
 .Lucas,
 .isAnArtistCoder,
-.basedInBrooklyn,
-.hePrograms,
-.websites,
-.forArtsSake,
+.basedInToronto,
+.heDesigns,
+.products,
+.forBeauty,
 .throughScreens,
 .ifYoureCurious,
 .viewHisProjects,
@@ -678,7 +690,7 @@ header h1 {
 }
 
 .Lucas,
-.forArtsSake,
+.forBeauty,
 .ya {
   -webkit-transform: rotate(3deg);
           transform: rotate(3deg);
@@ -691,21 +703,21 @@ header h1 {
           transform: rotate(-1deg);
 }
 
-.basedInBrooklyn,
+.basedInToronto,
 .ifYoureCurious,
 .peruseCV {
   -webkit-transform: rotate(1deg);
           transform: rotate(1deg);
 }
 
-.hePrograms,
+.heDesigns,
 .viewHisProjects,
 .emailHim {
   -webkit-transform: rotate(-3deg);
           transform: rotate(-3deg);
 }
 
-.websites,
+.products,
 .toSenseHisVibe {
   -webkit-transform: rotate(-2deg);
           transform: rotate(-2deg);
@@ -718,18 +730,18 @@ h1 a,
 }
 
 @media (max-width: 800px) {
-  .hePrograms,
-  .websites,
-  .forArtsSake,
+  .heDesigns,
+  .products,
+  .forBeauty,
   .throughScreens {
     display: none;
   }
 }
 
 @media (max-width: 800px) {
-  .hePrograms,
-  .websites,
-  .forArtsSake,
+  .heDesigns,
+  .products,
+  .forBeauty,
   .throughScreens {
     display: none;
   }
